test/classes/errors/new-function.good
new-function.chpl:7: error: Attempt to 'new' a function or undefined symbol
new-function.chpl:8: error: Attempt to 'new' a function or undefined symbol
new-function.chpl:12: error: Attempt to 'new' a function or undefined symbol
